[package]
name = "dive"
version = "0.1.0"
authors = ["Michael Droogleever Fortuyn <droogmic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
ed25519 = "1.0"
ed25519-dalek = "1.0"
rand_core = { version="0.5", features=["std"] }

